human-intervention-logs/org.sonatype.sisu:sisu-inject-bean:2.4.0/gradle-test/gradle-test-2026-05-19T15-08-36-441041Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.sonatype.sisu:sisu-inject-bean:2.4.0
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6922-b4c8db6f/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible and 3 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :checkTestTimeoutAnnotations

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6922-b4c8db6f/tests/src/org.sonatype.sisu/sisu-inject-bean/2.4.0/src/test/java/org_sonatype_sisu/sisu_inject_bean/SisuGuiceTest.java:42: error: SingleBeanLocator is not abstract and does not override abstract method <Q,T>locate(Key<T>) in BeanLocator
    private static final class SingleBeanLocator implements BeanLocator {
                         ^
  where Q,T are type-variables:
    Q extends Annotation declared in method <Q,T>locate(Key<T>)
    T extends Object declared in method <Q,T>locate(Key<T>)
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6922-b4c8db6f/tests/src/org.sonatype.sisu/sisu-inject-bean/2.4.0/src/test/java/org_sonatype_sisu/sisu_inject_bean/SisuGuiceTest.java:51: error: <Q#1,T#1>locate(Key<T#1>) in SingleBeanLocator cannot implement <Q#2,T#2>locate(Key<T#2>) in BeanLocator
        public <Q extends Annotation, T> Iterable<? extends BeanEntry<Q, T>> locate(Key<T> key) {
                                                                             ^
  return type Iterable<? extends BeanEntry<Q#1,T#1>> is not compatible with Iterable<BeanEntry<Q#1,T#1>>
  where Q#1,T#1,Q#2,T#2 are type-variables:
    Q#1 extends Annotation declared in method <Q#1,T#1>locate(Key<T#1>)
    T#1 extends Object declared in method <Q#1,T#1>locate(Key<T#1>)
    Q#2 extends Annotation declared in method <Q#2,T#2>locate(Key<T#2>)
    T#2 extends Object declared in method <Q#2,T#2>locate(Key<T#2>)
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6922-b4c8db6f/tests/src/org.sonatype.sisu/sisu-inject-bean/2.4.0/src/test/java/org_sonatype_sisu/sisu_inject_bean/SisuGuiceTest.java:49: error: method does not override or implement a method from a supertype
        @Override
        ^
3 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6922-b4c8db6f/tests/src/org.sonatype.sisu/sisu-inject-bean/2.4.0/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6922-b4c8db6f/tests/src/org.sonatype.sisu/sisu-inject-bean/2.4.0/src/test/java/org_sonatype_sisu/sisu_inject_bean/SisuGuiceTest.java:51: error: <Q#1,T#1>locate(Key<T#1>) in SingleBeanLocator cannot implement <Q#2,T#2>locate(Key<T#2>) in BeanLocator
          public <Q extends Annotation, T> Iterable<? extends BeanEntry<Q, T>> locate(Key<T> key) {
                                                                               ^
    return type Iterable<? extends BeanEntry<Q#1,T#1>> is not compatible with Iterable<BeanEntry<Q#1,T#1>>
    where Q#1,T#1,Q#2,T#2 are type-variables:
      Q#1 extends Annotation declared in method <Q#1,T#1>locate(Key<T#1>)
      T#1 extends Object declared in method <Q#1,T#1>locate(Key<T#1>)
      Q#2 extends Annotation declared in method <Q#2,T#2>locate(Key<T#2>)
      T#2 extends Object declared in method <Q#2,T#2>locate(Key<T#2>)
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6922-b4c8db6f/tests/src/org.sonatype.sisu/sisu-inject-bean/2.4.0/src/test/java/org_sonatype_sisu/sisu_inject_bean/SisuGuiceTest.java:42: error: SingleBeanLocator is not abstract and does not override abstract method <Q,T>locate(Key<T>) in BeanLocator
      private static final class SingleBeanLocator implements BeanLocator {
                           ^
    where Q,T are type-variables:
      Q extends Annotation declared in method <Q,T>locate(Key<T>)
      T extends Object declared in method <Q,T>locate(Key<T>)
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6922-b4c8db6f/tests/src/org.sonatype.sisu/sisu-inject-bean/2.4.0/src/test/java/org_sonatype_sisu/sisu_inject_bean/SisuGuiceTest.java:49: error: method does not override or implement a method from a supertype
          @Override
          ^
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
13 actionable tasks: 2 executed, 11 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6922-b4c8db6f/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.sonatype.sisu:sisu-inject-bean:2.4.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
9 actionable tasks: 1 executed, 8 up-to-date
